<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.inria.cedar</groupId>
	<artifactId>quotientSummary</artifactId>
	<version>1.8-SNAPSHOT</version>

	<packaging>jar</packaging>

	<name>quotientSummary</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>fr.inria.cedar.ontosql</groupId>
			<artifactId>ontosql-rdfdb</artifactId>
			<version>1.0.8-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.5.jre7</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.sleepycat</groupId>
			<artifactId>je</artifactId>
			<version>5.0.73</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-model</artifactId>
			<version>3.6.0</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.4</version>
		</dependency>
	</dependencies>
	<distributionManagement>
		<repository>
			<id>cedarcommons-private-release</id>
			<name>CEDAR-commons MVN release repo</name>
			<url>http://maven.inria.fr/artifactory/cedarcommons-private-release</url>
		</repository>
		<snapshotRepository>
			<id>cedarcommons-private-snapshot</id>
			<name>CEDAR-commons MVN snapshot repo</name>
			<url>http://maven.inria.fr/artifactory/cedarcommons-private-snapshot</url>
		</snapshotRepository>
	</distributionManagement>
	<repositories>
		<repository>
			<id>cedarcommons-private-release</id>
			<name>CEDAR-commons MVN release repo</name>
			<url>http://maven.inria.fr/artifactory/cedarcommons-private-release</url>
		</repository>
	</repositories>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.4.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifest>
							<!-- Jar file entry point -->
							<addClasspath>true</addClasspath>
							<mainClass>fr.inria.cedar.quotientSummary.BuilderCmd</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<finalName>quotientSummaryWithDependencies-${project.version}</finalName>
					<appendAssemblyId>false</appendAssemblyId>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>